--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
     <footer>
       <p>Weather API Site by Nicolas Bes 2025</p>
       <div class="footer-links">
-        <a href="https://github.com/seuusuario" target="_blank" title="GitHub">
+        <a href="https://github.com/NickFBes" target="_blank" title="GitHub">
           <img src="./src/imagens/github-icon.png" alt="GitHub" width="24" />
           <p>Github</p>
         </a>
-        <a href="https://seuportfolio.com" target="_blank" title="Portfolio">
+        <a href="https://nickfbes.github.io/portfolio-vue/" target="_blank" title="Portfolio">
           <img src="./src/imagens/portfolio-icon.png" alt="Portfolio" width="24" />
           <p>Portfolio</p>
         </a>
